--- a/ConferencesBook/first-session.html
+++ b/ConferencesBook/first-session.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="prism.html">
-<link rel="next" href="prism-afternoon.html">
+<link rel="prev" href="opening-remark.html">
+<link rel="next" href="second-session.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -152,58 +152,116 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="morning" class="section level2">
-<h2><span class="header-section-number">5.1</span> Morning</h2>
-<div id="lim-covariate-model" class="section level3">
-<h3><span class="header-section-number">5.1.1</span> Lim Covariate model</h3>
-<div id="ischemic-stroke" class="section level4">
-<h4><span class="header-section-number">5.1.1.1</span> Ischemic stroke</h4>
+<div id="first-session" class="section level2">
+<h2><span class="header-section-number">2.2</span> First Session</h2>
 <ul>
-<li>Primary endpoint</li>
-<li>time-to-primary endpoint (time-to-event)</li>
-<li>late recurrence, DM</li>
-<li>Secondary endpoint</li>
-<li>late recurrence</li>
-<li>통상적인 VPC - K-M plots</li>
-<li>Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke <a href="http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract" class="uri">http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract</a> <span class="citation">[<a href="#ref-Lim_2014">1</a>]</span></li>
+<li>Chair : Deborah Chee(KoNECT)</li>
+</ul>
+<div id="precision-medicine-a-clinical-pharmacological-perspective" class="section level3">
+<h3><span class="header-section-number">2.2.1</span> 13:20~14:00 Precision Medicine: A Clinical Pharmacological Perspective</h3>
+<ul>
+<li>Speaker: <a href="https://en.wikipedia.org/wiki/Munir_Pirmohamed">Munir Pirmohamed</a> (University of Liverpool, UK)</li>
+<li>Fava beans - Favism G6PD deficiency - withrawal of antimalarials</li>
+<li>2015 Obama Precision Medicine $215m / 2016 China $8b</li>
+<li>Phenotypic definition(current standard) - Molecular definition (disease stratification) - Drug variability</li>
+<li>Mandatory genomic testing - EMA SmPC</li>
+<li>Pharmacogenomics Journal (2015) 1-10</li>
+<li>Crizotinib vs CTx in advanced ALK+ lung cancer (NEJM 2013)</li>
+<li>Novel trial design (Nature 2015)</li>
+</ul>
+<ol style="list-style-type: decimal">
+<li>Umbrella trial (single tumor - multiple arm - multiple drugs)</li>
+<li>Basket study</li>
+</ol>
+<ul>
+<li>Support of humen genetic evidence for approved drug indication (Nature Genetics)</li>
+<li>Sclerosteosis - skeletal overgrowth and syndactyly, AR , mutations in SOST gene - target sclerostin</li>
+<li>anti-sclerostin Ab (ROMOSOZUMAB, BLOSOZUMAB) - bone density increase - mouse</li>
+<li>New cardiovascular targets</li>
+<li>PCSK9 - GOF-&gt;LDL-C increase &amp; CVD</li>
+<li>ANGPTL4</li>
+<li>HLA-genotype and carbamazepine-induced cutaneous ADR: systemic review (CPT,2012)</li>
+<li>ITCH (Drug hypersensitivity)</li>
+<li>Phase I, II - very strong association (Manhattan plot) - GWAS - ALK(germline polymorphism-&gt; T cell expansion)</li>
+<li>SJS GWAS (Genin 2011) <a href="http://www.ncbi.nlm.nih.gov/pubmed/21801394" class="uri">http://www.ncbi.nlm.nih.gov/pubmed/21801394</a></li>
+<li>Skin, Liver</li>
+<li>CBZ-induced hypersensitivity vs CBZ-tolerant patients</li>
+<li>HLA-A*31:01(thirtyone o one)</li>
+<li>HLA and ADR</li>
+<li>The effect of pharmacogenetic profiling with a clinical decision support tool on healthcare resource utilization and estimated costs in the elderly exposed to polypharmacy. (2016) <a href="http://www.ncbi.nlm.nih.gov/pubmed/26478982" class="uri">http://www.ncbi.nlm.nih.gov/pubmed/26478982</a></li>
+<li>Somatic genomes -&gt; microbiome is also important</li>
+<li>Digoxin and antibiotics (1981, NEJM) -&gt; (2013 Science) Cardiac drug inactivation by human gut bacteria</li>
+<li>Microbiome and Cancer Immunotherapy - Snyder, Science Nov 2015</li>
+<li>Two books introduced.</li>
+</ul>
+<ol style="list-style-type: decimal">
+<li>Prescription for nhs</li>
+<li>clinical pharma dynamic medical specialty</li>
+</ol>
+</div>
+<div id="the-role-of-pharmacogenomics-in-drug-development-regulatory-review-and-clinical-practice" class="section level3">
+<h3><span class="header-section-number">2.2.2</span> 14:00~14:30 The role of pharmacogenomics in drug development, regulatory review and clinical practice</h3>
+<ul>
+<li>Speaker: Shiew-Mei Huang (North Potomac, MD, USA)</li>
+<li>CPIC (Clinical pharmacogenetics guidelines)</li>
+<li>IFNL3(IL28B) HCV treatment Favorable response = 77% Asian (Genotype CC)</li>
+<li>Paving the way for Personalized Medicine (Oct 2013)</li>
+<li>Avacavir HLA-B*5701 (RCT) Utility of pharmacogenetic tests</li>
+<li>Munir mentioned - CBZ &amp; HLA-B*1502</li>
+<li>ASCO meeting - CTx vs Targeted therapy - Umbrella study</li>
+<li>Drug labeling “FDA-approved test”</li>
+<li>XALKORI - Crizotinib and ALK</li>
+<li>CPT Feb 2016 - Precision Medicine , “Companion Diagnostics” Something unique to conduct , “Complementary diagnostics”</li>
+<li>Eliglustat and CYP2D6 , Drug labeling</li>
+<li>Center for Device</li>
+<li>Integral to the future of personalized or precision medicine</li>
+<li>NGS</li>
+<li>PrecisionFDA initiative</li>
+<li>23andMe - Drug response , Confidence</li>
+<li>Cleared or approved FDA</li>
+<li>CLIA-certified laboratory</li>
+</ul>
+<div id="my-question" class="section level4">
+<h4><span class="header-section-number">2.2.2.1</span> My Question</h4>
+<ul>
+<li>One NGS - individual test to is there a review of all-in-one Test in progress?</li>
 </ul>
 </div>
-<div id="mr-image----" class="section level4">
-<h4><span class="header-section-number">5.1.1.2</span> MR image -&gt; 예후 예측</h4>
+</div>
+<div id="the-liver-gut-microbiota-axis-modulates-inter-individual-variability-in-xenobiotic-disposition-and-toxicology" class="section level3">
+<h3><span class="header-section-number">2.2.3</span> 14:30~15:00 The Liver-Gut Microbiota Axis Modulates Inter-Individual Variability in Xenobiotic Disposition and Toxicology</h3>
 <ul>
-<li>mRS (modified Rankin Scale)</li>
-<li>응급실에 왔을때</li>
-<li>DM - NIH scale 3D Plot</li>
-<li>광학영상 - preclinical 에서 부터 NONMEM을 사용해서</li>
-</ul>
-</div>
-</div>
-<div id="fda---lee" class="section level3">
-<h3><span class="header-section-number">5.1.2</span> FDA - Lee</h3>
+<li>Speaker: Eric Chun Yong Chan (National University of Singapore)</li>
+<li>Liver - major organ for disposition and detoxification</li>
+<li>60% (explanble) vs 40% (how about this?) - superorganism</li>
+<li>400 different species (~1.5kg)</li>
+<li>Haiser (2012, Science) Gut microbe - drug, host interaction</li>
+<li>TOC: 1 DMD paper , 2 in-house project</li>
+<li>DMD - reduction, hydrolysis</li>
+<li>absorption - simvastatin - poor responder, average, good 10% 80% 10%
 <ul>
-<li><a href="http://www.dailypharm.com/News/202010" class="uri">http://www.dailypharm.com/News/202010</a></li>
-<li><a href="https://www.linkedin.com/in/jogagobburu">Joga Gobburu</a> - 인도사람</li>
-<li><a href="https://www.linkedin.com/in/yaning-wang-a47192b">Yaning Wang</a> - deputy director</li>
-<li><a href="https://www.linkedin.com/in/vikram-sinha-9a28476">Vikram Sinha</a></li>
-<li>math molecular biology - impressive - reviewer</li>
-<li>Office of CP - 7개 division, 1~5 clinical division- 질환별로 - align (DCP) PM(떠오르는 학문) PG division</li>
+<li>OATP1B1 in liver and intestine</li>
+<li>Possibility of competition between simvastatin and bile acids for hepatic uptake by transporter</li>
+<li>antibiotics - nitro-reduction by gut microbiota inhibition</li>
+<li>Therapeutic fficacy - DDI</li>
+</ul></li>
+<li>PCA analysis PNAS 2009 - significant differences in concentration</li>
+<li>PNAS 2009 inverse corr - p-cresol &lt;-&gt; AAP</li>
+<li>2nd part - Tacrine - first drug approved for AD. Toxicological manifestation - increased AST/ALT</li>
+<li>Interindividual variability. why?</li>
+<li>Tacrine metabolism - hydroxylation / glucuronide</li>
+<li>mitochondrial toxicity and hypoxia-reoxygenation</li>
+<li>part I~V</li>
+<li>Tacrine-induced transaminitis</li>
+<li>EXT - CMax,AUC high why? - phase II metabolite?</li>
+<li>host gene - mRNA</li>
+<li>GC/TO</li>
+<li>PCA analysis principal component analysis</li>
+<li>NORMAL Lactobacillus</li>
+<li>EXT Bacteriode Blautia</li>
+<li>Metagenome level</li>
+<li>Liver - Tacrine-&gt; TacrineNGlucuronide</li>
 </ul>
-</div>
-<div id="pfizer" class="section level3">
-<h3><span class="header-section-number">5.1.3</span> Pfizer</h3>
-<ul>
-<li>파리바?</li>
-<li>크루시파이? - Metz Karlsson과는 아니고..</li>
-<li>파일러비시니? UW - metrician -&gt; 임상약리에서 뽑았다. (파리바)</li>
-<li>피터 뮬리건? &lt;-&gt; 아만티아(놀려고 함..)</li>
-<li>밥 파월 = 임동석 선생님</li>
-</ul>
-</div>
-</div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-Lim_2014">
-<p>1. Lim H-S, Bae K-S (2014) Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke. The Journal of Clinical Pharmacology 55:458–466</p>
 </div>
 </div>
             </section>
@@ -211,8 +269,8 @@ MathJax.Hub.Config({
           </div>
         </div>
       </div>
-<a href="prism.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="prism-afternoon.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="opening-remark.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="second-session.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -239,7 +297,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-07-13-PRISM.rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-06-14-2016-KSCPT.rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
