--- a/ConferencesBook/observational-study-pitfall-.html
+++ b/ConferencesBook/observational-study-pitfall-.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="prism.html">
-<link rel="next" href="prism-afternoon.html">
+<link rel="prev" href="observational-study.html">
+<link rel="next" href="diagnostic-test-biomarker-study.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -152,58 +152,112 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="morning" class="section level2">
-<h2><span class="header-section-number">5.1</span> Morning</h2>
-<div id="lim-covariate-model" class="section level3">
-<h3><span class="header-section-number">5.1.1</span> Lim Covariate model</h3>
-<div id="ischemic-stroke" class="section level4">
-<h4><span class="header-section-number">5.1.1.1</span> Ischemic stroke</h4>
+<div id="observational-study-pitfall-----" class="section level2">
+<h2><span class="header-section-number">4.2</span> Observational Study의 Pitfall 및 이를 극복하기 위한 방법</h2>
 <ul>
-<li>Primary endpoint</li>
-<li>time-to-primary endpoint (time-to-event)</li>
-<li>late recurrence, DM</li>
-<li>Secondary endpoint</li>
-<li>late recurrence</li>
-<li>통상적인 VPC - K-M plots</li>
-<li>Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke <a href="http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract" class="uri">http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract</a> <span class="citation">[<a href="#ref-Lim_2014">1</a>]</span></li>
+<li>Speaker: 임영석 교수님</li>
+</ul>
+<div id="experimental-study-yes" class="section level3">
+<h3><span class="header-section-number">4.2.1</span> Experimental study? Yes</h3>
+<div id="randomized-design-interventional--no" class="section level4">
+<h4><span class="header-section-number">4.2.1.1</span> Randomized design? (interventional)- No</h4>
+<ul>
+<li>NR CLINICAL trial</li>
+<li>Time series</li>
+<li>PHASE 1</li>
 </ul>
 </div>
-<div id="mr-image----" class="section level4">
-<h4><span class="header-section-number">5.1.1.2</span> MR image -&gt; 예후 예측</h4>
+<div id="randomized-design-interventional--yes" class="section level4">
+<h4><span class="header-section-number">4.2.1.2</span> Randomized design? (interventional)- Yes</h4>
 <ul>
-<li>mRS (modified Rankin Scale)</li>
-<li>응급실에 왔을때</li>
-<li>DM - NIH scale 3D Plot</li>
-<li>광학영상 - preclinical 에서 부터 NONMEM을 사용해서</li>
-</ul>
-</div>
-</div>
-<div id="fda---lee" class="section level3">
-<h3><span class="header-section-number">5.1.2</span> FDA - Lee</h3>
-<ul>
-<li><a href="http://www.dailypharm.com/News/202010" class="uri">http://www.dailypharm.com/News/202010</a></li>
-<li><a href="https://www.linkedin.com/in/jogagobburu">Joga Gobburu</a> - 인도사람</li>
-<li><a href="https://www.linkedin.com/in/yaning-wang-a47192b">Yaning Wang</a> - deputy director</li>
-<li><a href="https://www.linkedin.com/in/vikram-sinha-9a28476">Vikram Sinha</a></li>
-<li>math molecular biology - impressive - reviewer</li>
-<li>Office of CP - 7개 division, 1~5 clinical division- 질환별로 - align (DCP) PM(떠오르는 학문) PG division</li>
-</ul>
-</div>
-<div id="pfizer" class="section level3">
-<h3><span class="header-section-number">5.1.3</span> Pfizer</h3>
-<ul>
-<li>파리바?</li>
-<li>크루시파이? - Metz Karlsson과는 아니고..</li>
-<li>파일러비시니? UW - metrician -&gt; 임상약리에서 뽑았다. (파리바)</li>
-<li>피터 뮬리건? &lt;-&gt; 아만티아(놀려고 함..)</li>
-<li>밥 파월 = 임동석 선생님</li>
+<li>Clinical Trial</li>
+<li>Community Trial</li>
+<li>Crossover design</li>
 </ul>
 </div>
 </div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-Lim_2014">
-<p>1. Lim H-S, Bae K-S (2014) Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke. The Journal of Clinical Pharmacology 55:458–466</p>
+<div id="experimental-study-no" class="section level3">
+<h3><span class="header-section-number">4.2.2</span> Experimental study? No</h3>
+<div id="comparison-group-no-observational-study" class="section level4">
+<h4><span class="header-section-number">4.2.2.1</span> Comparison group? No = Observational study</h4>
+<ul>
+<li>Prevalence / incidence,</li>
+<li>time trend,</li>
+<li>case series,</li>
+<li>case reoprt</li>
+</ul>
+</div>
+<div id="comparison-group-yes-analytical-study" class="section level4">
+<h4><span class="header-section-number">4.2.2.2</span> Comparison group? Yes = Analytical study</h4>
+<ul>
+<li>Cohort study,</li>
+<li>case-control study,</li>
+<li>cross-sectional study,</li>
+<li>ecologic study,</li>
+<li>PMS</li>
+<li>두군을 비교하는가 안하는가가 중요한 기준이 된다.</li>
+</ul>
+</div>
+</div>
+<div id="contents-1" class="section level3">
+<h3><span class="header-section-number">4.2.3</span> Contents</h3>
+<ul>
+<li>research question -(design)- study plan -(implement)- actual study</li>
+<li>findings in the study -(infer)- truth in the study -(infer)- truth in the universe</li>
+<li>위암, 대장, 폐암 - post op outcome을 통채로 비교하면 안된다.</li>
+<li>internal validity &amp; external validity(generalization)</li>
+<li>PICO anatomy #####</li>
+<li>patient/population/problemn</li>
+<li>Intervention</li>
+<li>Comparison</li>
+<li>Outcome</li>
+<li>Gold standard of clinical studies - RCT</li>
+<li>Sample - randomization (Treated / Control)</li>
+<li>Research question - interesting, important, critical</li>
+<li>Good research question - FINER - Feasible, Interesting, Novel, Ethical, Relevant</li>
+<li>Feasible / Ethical / Relevant 가장 중요한 면</li>
+<li>Prospective Cohort Study -</li>
+<li>Case-control study - 뒤로 간다. 병원에서 case-control 하는 경우는 사망여부. Outcome인 경우가 많다. disease있고 없고가 아니라.</li>
+<li>재발에 대한 - 환자군/대조군을 모아서. 그럼 어떻게 대조군 설정한건가?? 이런 것을 정할때 bias가 많이 발생하게 된다.</li>
+<li>Historical cohort - Cohort assembled-(f/u)-&gt;Outcome</li>
+<li>2000-2010 HCC 초치료 근치적 수술적 절제술 받은 환자들의 명단을 확보.</li>
+<li>ITT analysis할때 반드시 필요하다.</li>
+<li>5년 이상 관찰한 것이 있어.</li>
+<li>Mimic those of clinical trials</li>
+<li>Internal validity를 높여야 한다. restricted cohort / NEJM 2000;342:1887</li>
+<li>IIT 분석을 해라.</li>
+<li>Chance(Random Error) vs Bias(Systematic Error)</li>
+<li>association / cause를 비교해야.</li>
+<li>Confounder</li>
+<li>biasd와는 좀 다르다. 미리 의식하고 물어보기 전엔 절대 알수 없다. 미리 질환에 대해 잘 알고있는 연구자여야만 찾을 수 있다.</li>
+<li>Example : smoking - alcohol - heart disease</li>
+<li>What is the effect of long-term tx(&gt;5y) with a potent oral antiviral agent(entecavir)(I) in patients with chronic hep B(P)</li>
+<li>FDA, 식약처는 Surrogate marker를 가지고 허가를 내준다. (조직학적 개선,) - 이것과 환자의 outcome을 정말로 개선시키는건가? 이건 observational study에서만 찾을 수 있다. historical cohort</li>
+<li>Zero time No treatment control</li>
+<li>Endpoint ascertainment - 재발이 문제가 된다. 무엇으로 재발을 판정할 것인가? MR? CT? 검사간격을 얼마로 했니? 누구도 시비 못할 것으로 outcome measure하는 것이 좋다. (예를 들어 사망의 경우)</li>
+<li>PP vs ITT</li>
+<li>ITT - which treatment option is best at the time decision must be made? - FDA에서 ITT만 인정을 한다.</li>
+<li>Explanatory</li>
+<li>Multivariable Cox PH Analysis - (Event 수를 적어야 한다.) Univariate analysis만으로는 부족.</li>
+<li>Multivariate analysis -</li>
+<li>Propensity score - SPSS로 가능. 양군간 matching - 쌍을 갖춘다. 같은 수로 나온다. 이때는 univariate할 수 있다.</li>
+<li>“consistently observed by unadjusted.” - obs study는 의심을 많이 받기 때문에. 이런 분석을 하는 것이 좋다.</li>
+<li>Gadoxetic - liver specific contrast agent</li>
+<li>2647patients-&gt;700명 수술 가능. - surrogate marker - CT에서 못본걸 MR에서 찾았다. | Cost-effectiveness - 무조건 survival. Propensity matching - Inverse Probability Weighing (IPTW)
+<ol style="list-style-type: decimal">
+<li>Unadjsted</li>
+<li>mutivariable</li>
+<li>IPTW</li>
+<li>Propensity</li>
+</ol></li>
+<li>제목의 중요성. JCO (IF 21) - Hepatology (IF 11.7) - Gut (IF 14.921) (early rejection so far) - GE (IF 18.187) (accepted with more general terms in the title)</li>
+</ul>
+</div>
+<div id="conclusion" class="section level3">
+<h3><span class="header-section-number">4.2.4</span> Conclusion</h3>
+<ul>
+<li>mimic as closely as possible in RCT</li>
+</ul>
 </div>
 </div>
             </section>
@@ -211,8 +265,8 @@ MathJax.Hub.Config({
           </div>
         </div>
       </div>
-<a href="prism.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="prism-afternoon.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="observational-study.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="diagnostic-test-biomarker-study.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -239,7 +293,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-07-13-PRISM.rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-06-24-ACREP.rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
