--- a/ConferencesBook/plenary-session-ii-rd-.html
+++ b/ConferencesBook/plenary-session-ii-rd-.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="prism.html">
-<link rel="next" href="prism-afternoon.html">
+<link rel="prev" href="translation-and-convergence-for-future-medicine.html">
+<link rel="next" href="parallel-session-i-chairperson-.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -152,58 +152,81 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="morning" class="section level2">
-<h2><span class="header-section-number">5.1</span> Morning</h2>
-<div id="lim-covariate-model" class="section level3">
-<h3><span class="header-section-number">5.1.1</span> Lim Covariate model</h3>
-<div id="ischemic-stroke" class="section level4">
-<h4><span class="header-section-number">5.1.1.1</span> Ischemic stroke</h4>
+<div id="plenary-session-ii--rd-" class="section level2">
+<h2><span class="header-section-number">3.1</span> Plenary Session II “의료기술및 R&amp;D 변화의최신동향”</h2>
 <ul>
-<li>Primary endpoint</li>
-<li>time-to-primary endpoint (time-to-event)</li>
-<li>late recurrence, DM</li>
-<li>Secondary endpoint</li>
-<li>late recurrence</li>
-<li>통상적인 VPC - K-M plots</li>
-<li>Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke <a href="http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract" class="uri">http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract</a> <span class="citation">[<a href="#ref-Lim_2014">1</a>]</span></li>
+<li>Chairperson :김청수(서울아산병원비뇨기과교수)</li>
+</ul>
+<div id="lecture-1--------" class="section level3">
+<h3><span class="header-section-number">3.1.1</span> 13:30 ~ 14:15 Lecture 1 :의료분야에서의 빅데이터 :임상연구 및 진료를 위한 애널리틱스의 활용</h3>
+<ul>
+<li>Speaker: David W. Bates (Harvard University, Brigham and Women’s Hospital, USA)</li>
+<li>Rising costs</li>
+<li>Moneyball, Boston red sox, walmart, watson</li>
+<li>Big data 1M - 1giga(human genome) - 1 peta</li>
+<li>EHR, Genetics, Diagnostics, Mobile devices,</li>
+<li>Meaningful Use - EHR - growing.</li>
+<li><a href="https://www.healthit.gov/providers-professionals/meaningful-use-definition-objectives" class="uri">https://www.healthit.gov/providers-professionals/meaningful-use-definition-objectives</a></li>
+<li><a href="https://healthit.gov" class="uri">https://healthit.gov</a></li>
+<li>Big data concepts</li>
+<li>Validation is important!</li>
+<li>Big data and research - Brigham and Women’s - Pathology ePath, Immunology Big data Genomic platform</li>
+<li>Essential for future approach</li>
+<li>RPDR - New entity at partners healthcare = CMS, biobank, survey data, imaging, notes repo</li>
+<li>Big data in clinical care</li>
+<li>5% patients ~ 50% cost</li>
+<li>iCMP claims-based approach - 3000 patients</li>
+<li>multiple parameters - wearable devices - continuous supervision on general care floors</li>
+<li>Adverse events</li>
+<li>PCORnet - not popular</li>
+<li>New Sources - the trajectory of mobile apps</li>
+<li>Literature Review - 7301 titles and abstracts</li>
+<li>App Review - iTunes, Google Play -&gt; possibly useful 16</li>
+<li>Professional Society Review -</li>
+<li>Ginger.io <a href="https://ginger.io/" class="uri">https://ginger.io/</a></li>
+<li>to drive better health outcomes through the use of passive mobile data and behavioral analytics.</li>
+<li>!!! Example projects - Predictive Modeling</li>
+<li>What we need to do all these</li>
+<li>Analytics tools, repo, data warehouse, epic reporting (Clarity reporting database)</li>
+<li>Clinical data - ubiquitous</li>
+<li>!!!!Novel sources are most likely to provide marginal improvement - social, mobile!!!!</li>
+<li>Predictions / Implications</li>
+<li>Transformative as the internet</li>
+<li>Killer app - Google Maps</li>
+</ul>
+<div id="questions" class="section level4">
+<h4><span class="header-section-number">3.1.1.1</span> Questions</h4>
+<ul>
+<li>김규표 교수님 - Social media and health care</li>
+<li>김청수 교수님 - Government and insurance - reasonably difficult to acquire - costly.</li>
 </ul>
 </div>
-<div id="mr-image----" class="section level4">
-<h4><span class="header-section-number">5.1.1.2</span> MR image -&gt; 예후 예측</h4>
+</div>
+<div id="lecture-2----" class="section level3">
+<h3><span class="header-section-number">3.1.2</span> 14:15 ~ 15:00 Lecture 2 :합성 항체에서 합성 단백질로</h3>
 <ul>
-<li>mRS (modified Rankin Scale)</li>
-<li>응급실에 왔을때</li>
-<li>DM - NIH scale 3D Plot</li>
-<li>광학영상 - preclinical 에서 부터 NONMEM을 사용해서</li>
+<li>Sachdev Sidhu (University of Toronto, Canada)</li>
+<li>The Donnelly Centre - From systems biology to systematic treatment</li>
+<li>Therapeutic antibody revolution - highly versatile, numorous diseases</li>
+<li>Ab-durg conjugates, fragment, bispecific, engineered cells</li>
+<li>Targeting cancer with antibodies</li>
+<li>!!! problem - small populations - boutique treatment!!!</li>
+<li>In vitro protein evolution</li>
+<li>Affinity, specificity enhanced</li>
+<li>Antibody molecules</li>
+<li>binding site of Ab</li>
+<li>highly optimized - automatic mutation of binding site</li>
+<li>Toronto Synthetic Antibody Library - highly diverse - Herceptin</li>
+<li>PHAGE - Genentech</li>
+<li>only changed the function, not others</li>
+<li>Functional genomics - <strong>Large-scale, industry-quality Ab generation</strong> - Preclinical biology | The middle was not quite available but now it’s doable.</li>
+<li>Cancer Antibody TRAC antibodies - bacerial pathogens</li>
+<li>High yield and high affinity Fabs from naive library - 1394 total against 80 targets</li>
+<li><a href="http://sites.utoronto.ca/sidhulab/about.html" class="uri">http://sites.utoronto.ca/sidhulab/about.html</a></li>
+<li>natural - synthetic Ab - synthetic proteins - synthesizable proteins</li>
+<li>D-protein therapeutics.- samll proteins synthesized entirely rom D-amino acids, Ab like affinity, specificity and stability,</li>
+<li>in vitro d-protein advantages - longer circulating HL than L-proteins - less immunogenicity - ersistant to metabolism in plasma</li>
 </ul>
-</div>
-</div>
-<div id="fda---lee" class="section level3">
-<h3><span class="header-section-number">5.1.2</span> FDA - Lee</h3>
-<ul>
-<li><a href="http://www.dailypharm.com/News/202010" class="uri">http://www.dailypharm.com/News/202010</a></li>
-<li><a href="https://www.linkedin.com/in/jogagobburu">Joga Gobburu</a> - 인도사람</li>
-<li><a href="https://www.linkedin.com/in/yaning-wang-a47192b">Yaning Wang</a> - deputy director</li>
-<li><a href="https://www.linkedin.com/in/vikram-sinha-9a28476">Vikram Sinha</a></li>
-<li>math molecular biology - impressive - reviewer</li>
-<li>Office of CP - 7개 division, 1~5 clinical division- 질환별로 - align (DCP) PM(떠오르는 학문) PG division</li>
-</ul>
-</div>
-<div id="pfizer" class="section level3">
-<h3><span class="header-section-number">5.1.3</span> Pfizer</h3>
-<ul>
-<li>파리바?</li>
-<li>크루시파이? - Metz Karlsson과는 아니고..</li>
-<li>파일러비시니? UW - metrician -&gt; 임상약리에서 뽑았다. (파리바)</li>
-<li>피터 뮬리건? &lt;-&gt; 아만티아(놀려고 함..)</li>
-<li>밥 파월 = 임동석 선생님</li>
-</ul>
-</div>
-</div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-Lim_2014">
-<p>1. Lim H-S, Bae K-S (2014) Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke. The Journal of Clinical Pharmacology 55:458–466</p>
 </div>
 </div>
             </section>
@@ -211,8 +234,8 @@ MathJax.Hub.Config({
           </div>
         </div>
       </div>
-<a href="prism.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="prism-afternoon.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="translation-and-convergence-for-future-medicine.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="parallel-session-i-chairperson-.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -239,7 +262,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-07-13-PRISM.rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-06-17-AMIS.rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
