--- a/ConferencesBook/second-session.html
+++ b/ConferencesBook/second-session.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="prism.html">
-<link rel="next" href="prism-afternoon.html">
+<link rel="prev" href="first-session.html">
+<link rel="next" href="translation-and-convergence-for-future-medicine.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -152,67 +152,129 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="morning" class="section level2">
-<h2><span class="header-section-number">5.1</span> Morning</h2>
-<div id="lim-covariate-model" class="section level3">
-<h3><span class="header-section-number">5.1.1</span> Lim Covariate model</h3>
-<div id="ischemic-stroke" class="section level4">
-<h4><span class="header-section-number">5.1.1.1</span> Ischemic stroke</h4>
+<div id="second-session" class="section level2">
+<h2><span class="header-section-number">2.3</span> Second Session</h2>
 <ul>
-<li>Primary endpoint</li>
-<li>time-to-primary endpoint (time-to-event)</li>
-<li>late recurrence, DM</li>
-<li>Secondary endpoint</li>
-<li>late recurrence</li>
-<li>통상적인 VPC - K-M plots</li>
-<li>Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke <a href="http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract" class="uri">http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract</a> <span class="citation">[<a href="#ref-Lim_2014">1</a>]</span></li>
+<li>Chair : Yong-Bok Lee(Chonnam National University)</li>
 </ul>
-</div>
-<div id="mr-image----" class="section level4">
-<h4><span class="header-section-number">5.1.1.2</span> MR image -&gt; 예후 예측</h4>
+<div id="the-role-of-stem-cells-in-discovery-and-validation-of-pharmacogenomic-markers" class="section level3">
+<h3><span class="header-section-number">2.3.1</span> 15:20~15:50 The role of stem cells in discovery and validation of pharmacogenomic markers</h3>
 <ul>
-<li>mRS (modified Rankin Scale)</li>
-<li>응급실에 왔을때</li>
-<li>DM - NIH scale 3D Plot</li>
-<li>광학영상 - preclinical 에서 부터 NONMEM을 사용해서</li>
+<li>Speaker : Eileen Dolan (The University of Chicago, USA)</li>
+<li>Ototoxicity, CTx Toxicity - hearing loss, peripheral neuropathy</li>
+<li>dose-limiting toxicity - platinum, taxanes, vinca, epothilones, bortezomib</li>
+<li>numbness, tingling, burning/stabbing pain</li>
+<li>partially , can be permanent</li>
+<li>Duloxetine - SNRI - CIPN</li>
+<li>pharmacogenomic studies - optimal model - testicular cancer -</li>
+<li>platinating agents</li>
+<li>CIPN - &gt;300mg/m2, dorsal root g. cell apoptosis, affects large neurons, axonal projections</li>
+<li>CTCAE of CIPN, patient-reported measures preferred (CIPN EORTC-CPIN20)</li>
+<li>PCA analysis</li>
+<li>age, smoking</li>
+<li>GWAS - CIPN6 -&gt; CAMTA1, RGS, WDR1, MAPK9, COA1, ILR2A</li>
+<li>Polygenic architecture</li>
+<li>PIPN : ECOG: rs3125923</li>
+<li>Stem cells - problems - identifying, priortizing</li>
+<li>cell-based PD analysis</li>
+<li>iPSC technology in PGx, CRISPR</li>
+<li>Neuronal measurements - total outgrowth processes, process length, branches, cell body area</li>
+<li>C, P, 5FU, Bortezomib, Vinc, Thalidomide</li>
+<li>inhibition of neurite outgrowth</li>
+<li>VIN - GWAS 2000 patients</li>
+<li>CEP72 - microtubules assembly, TT allele - susceptible -&gt; lower CEP72 mRNA expression</li>
+<li>knockdown of CEP72 in iPCSC -&gt; enhancing sensitivity to vincristine</li>
 </ul>
-</div>
-</div>
-<div id="fda---lee" class="section level3">
-<h3><span class="header-section-number">5.1.2</span> FDA - Lee</h3>
+<div id="questions---neurite-outgrowth" class="section level4">
+<h4><span class="header-section-number">2.3.1.1</span> Questions - neurite outgrowth</h4>
 <ul>
-<li><a href="http://www.dailypharm.com/News/202010" class="uri">http://www.dailypharm.com/News/202010</a></li>
-<li><a href="https://www.linkedin.com/in/jogagobburu">Joga Gobburu</a> - 인도사람</li>
-<li><a href="https://www.linkedin.com/in/yaning-wang-a47192b">Yaning Wang</a> - deputy director</li>
-<li><a href="https://www.linkedin.com/in/vikram-sinha-9a28476">Vikram Sinha</a></li>
-<li>math molecular biology - impressive - reviewer</li>
-<li>Office of CP - 7개 division, 1~5 clinical division- 질환별로 - align (DCP) PM(떠오르는 학문) PG division</li>
-</ul>
-</div>
-<div id="pfizer" class="section level3">
-<h3><span class="header-section-number">5.1.3</span> Pfizer</h3>
-<ul>
-<li>파리바?</li>
-<li>크루시파이? - Metz Karlsson과는 아니고..</li>
-<li>파일러비시니? UW - metrician -&gt; 임상약리에서 뽑았다. (파리바)</li>
-<li>피터 뮬리건? &lt;-&gt; 아만티아(놀려고 함..)</li>
-<li>밥 파월 = 임동석 선생님</li>
+<li>Neurons- mature enough?</li>
 </ul>
 </div>
 </div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-Lim_2014">
-<p>1. Lim H-S, Bae K-S (2014) Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke. The Journal of Clinical Pharmacology 55:458–466</p>
+<div id="pharmacogenomics-and-epigenomics" class="section level3">
+<h3><span class="header-section-number">2.3.2</span> 15:50~16:20 Pharmacogenomics and Epigenomics</h3>
+<ul>
+<li>Speaker: Matthias Schwab (IKP Stuttgart, Germany)</li>
+<li>Prognostic predictors</li>
+<li>Genetic make-up</li>
+<li>135 FDA-approved drugs with labeled pharmacogenomic information (2015-05-20)</li>
+<li>top 30 drugs with pharmacogenetic risk (w/ or w/o high-risk diplotype for gene)</li>
+<li>Genomics, proteomics metabolomics, microbiomics</li>
+<li>Genome Medicine 2016 (Auffray, Schwab)</li>
+<li>NEJM</li>
+<li>Cocktail approach - a single dose PK study - old fashion clinical pharmacology approach? -</li>
+<li>Metoprolol and Torsemide PK - heretability</li>
+<li>Koryza Genet Med 2016 - comprehensive analysis - ESP project (n=6500) and 1000 genomes project</li>
+<li>PNAS 2005 Fraga - Epigenomics and DNA methylation</li>
+<li>miRNA, methylation, histone modification(acetylation)</li>
+<li>CPT 2016, Fisel, Schaeffeler, Schwab - DNA methylation and its impact on disease pathophysioloy and drug therapy</li>
+<li>Heatmap - ADME genes - SLC transporters</li>
+</ul>
+<div id="my-quesion" class="section level4">
+<h4><span class="header-section-number">2.3.2.1</span> My Quesion</h4>
+<ul>
+<li>Can we develop therapeutics which target locus of epigenetic (Decitabine)- Renal cancer cell - treatment of decitabine - demethylating agents (Specificity?)</li>
+<li>Epigenomics</li>
+</ul>
 </div>
 </div>
+<div id="emerging-roles-of-human-cyp1b1-in-cancer-growth-and-metastasis" class="section level3">
+<h3><span class="header-section-number">2.3.3</span> 16:20~16:50 Emerging roles of human CYP1B1 in cancer growth and metastasis</h3>
+<ul>
+<li>Speaker: Young-Jin Chun (Chung-Ang University, KOREA)</li>
+<li>P450 (CYP1B1)</li>
+<li>Estrogen metabolism : E2-&gt;4-OHE2(endogenous mutagen)</li>
+<li>ZYC300 cancer vaccine - CYP1B1 DNA Vaccine</li>
+<li>Immunity to CYP1B1 -&gt; Clinical benefit</li>
+<li>과발현시 - PCNA increased</li>
+<li>TMS - specific human CYP1B1 - DMBA-&gt;PPCNA increased, DMBA+TMS-&gt;PBNA back to normal</li>
+<li>CYP1B1 -&gt; EMT (ECADHERIN, ZEB1, Vimentin, twist1 ) FUNCTIONAL STUDY , Can we transmembrane migration - cancer progression</li>
+<li>SP1 Transctiption factors - Mithramycin A(binding inhibittor) DMBA에의해 증가한 에스피1등이 mitA를 억제.</li>
+<li>이러한 결과들을 통해서 SP1이 암 증식 chip assay</li>
+<li>4OHE는 EMT 촉진된다.</li>
+<li>억제 - Mithramycin A</li>
+<li>촉진 - DMBA, CYP1B1, SP1, 4OHE</li>
+<li>Matrigel, migration -&gt; migration, invasion</li>
+</ul>
+<div id="section" class="section level4">
+<h4><span class="header-section-number">2.3.3.1</span> </h4>
+<p>1B1에 의해 대사되는 irinotecan - 알수가 없다. Tumor 조직을 갖고 enzyme activity 측정전에. active metabolism 2D6는 steroid</p>
+</div>
+</div>
+<div id="omics-for-precision-medicine-clinical-implementation-in-oncology" class="section level3">
+<h3><span class="header-section-number">2.3.4</span> 16:50~17:20 omics for precision Medicine : Clinical Implementation in oncology</h3>
+<ul>
+<li>Speaker: Kyu-pyo Kim (University of Ulsan College of Medicine, KOREA)</li>
+<li>effects are not immediate / severe adverse effects / narrow therapeutic window</li>
+<li>UGT1A1 genotypes - different enzyme activities , Irinotecan</li>
+<li>Irinotecan -&gt; practical decision making - not reached.</li>
+<li>genotype information - strong enough?</li>
+<li>neutropenia, diarrhea</li>
+<li>mutations are abundant - mutational loading (high- melanoma, lung sq cel carcinoma)</li>
+<li>Point mutations, copy # variation -&gt; omics + NGS -&gt; clinical interpretation -&gt; clinical decision making</li>
+<li>Ca Cancer J Clin 2016 - 1 month TIME IS IMPORTANT FOR PATIENTS.</li>
+<li>Issues : Forces or hurdles - COSTS - volume of patients/turnaround time/Central testing/Quality control</li>
+<li>NCI-Match - somatic mutation - Oncomine Comprehensive Assay Gene List - How to report???</li>
+<li>KRAS A146 mutation in CRC -&gt; CTX guideline - clinical trial</li>
+<li>CPCM - KCSG 11th methodology -</li>
+<li>Transition : from research to practice - CLIA (23andMe)</li>
+<li>NGS 임상검사실 인증제도 추진중임.</li>
+<li>Summary - abundance of information is helpting us</li>
+<li>there are many hurdles</li>
+<li>multi-disciplinary efforts are needed.</li>
+</ul>
+
+</div>
+</div>
+<!-- </div> -->
             </section>
 
           </div>
         </div>
       </div>
-<a href="prism.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="prism-afternoon.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="first-session.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="translation-and-convergence-for-future-medicine.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -239,7 +301,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-07-13-PRISM.rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-06-14-2016-KSCPT.rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
