--- a/ConferencesBook/diagnostic-test-biomarker-study.html
+++ b/ConferencesBook/diagnostic-test-biomarker-study.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="prism.html">
-<link rel="next" href="prism-afternoon.html">
+<link rel="prev" href="observational-study-pitfall-.html">
+<link rel="next" href="-.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -152,58 +152,64 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="morning" class="section level2">
-<h2><span class="header-section-number">5.1</span> Morning</h2>
-<div id="lim-covariate-model" class="section level3">
-<h3><span class="header-section-number">5.1.1</span> Lim Covariate model</h3>
-<div id="ischemic-stroke" class="section level4">
-<h4><span class="header-section-number">5.1.1.1</span> Ischemic stroke</h4>
+<div id="diagnostic-test-biomarker-study" class="section level2">
+<h2><span class="header-section-number">4.3</span> Diagnostic test &amp; Biomarker Study</h2>
 <ul>
-<li>Primary endpoint</li>
-<li>time-to-primary endpoint (time-to-event)</li>
-<li>late recurrence, DM</li>
-<li>Secondary endpoint</li>
-<li>late recurrence</li>
-<li>통상적인 VPC - K-M plots</li>
-<li>Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke <a href="http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract" class="uri">http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract</a> <span class="citation">[<a href="#ref-Lim_2014">1</a>]</span></li>
+<li>Speaker: 박성호 - 영상의학과</li>
+</ul>
+<div id="contents---diagnostic-test" class="section level3">
+<h3><span class="header-section-number">4.3.1</span> Contents - Diagnostic test</h3>
+<ul>
+<li>DTA sutdy</li>
+<li>Prevalence낮으면</li>
+<li>횡으로 본다. Predictive Value - Prevalence에 영향을 받는다. Pre올라가면 PPV올라가. NPV낮아져.</li>
+<li>odds ratio - prevalence에 영향을 안받는다. intrinsic parameter로 많이 씀.</li>
+<li>case-control study vs cross-sectional study [옛날 용어]</li>
+<li>Cochrane - case-control type accuracy study vs cohort type accuracy study</li>
+<li>NECA - diagnostic case-control study vs diagnostic cohort study</li>
+<li>Area under ROC curve - C statistics</li>
+<li>Youden index - sens spec 더해서 빼기 1 Youden J statistic</li>
+<li>Least Euclidean distance from (0,1) 거리가 최소되는 점. - 쉬운개념</li>
+<li>diagnostic accuracy - 시각적으로 어떻게 구성하는지가 중요함.</li>
+<li>McNemar test</li>
+<li>Comparing two proportions (2x2) - unpaired(fisher,Chi2), paired (McNemar)</li>
 </ul>
 </div>
-<div id="mr-image----" class="section level4">
-<h4><span class="header-section-number">5.1.1.2</span> MR image -&gt; 예후 예측</h4>
+<div id="contents---biomarker" class="section level3">
+<h3><span class="header-section-number">4.3.2</span> Contents - Biomarker</h3>
 <ul>
-<li>mRS (modified Rankin Scale)</li>
-<li>응급실에 왔을때</li>
-<li>DM - NIH scale 3D Plot</li>
-<li>광학영상 - preclinical 에서 부터 NONMEM을 사용해서</li>
-</ul>
-</div>
-</div>
-<div id="fda---lee" class="section level3">
-<h3><span class="header-section-number">5.1.2</span> FDA - Lee</h3>
+<li>Biomarker
 <ul>
-<li><a href="http://www.dailypharm.com/News/202010" class="uri">http://www.dailypharm.com/News/202010</a></li>
-<li><a href="https://www.linkedin.com/in/jogagobburu">Joga Gobburu</a> - 인도사람</li>
-<li><a href="https://www.linkedin.com/in/yaning-wang-a47192b">Yaning Wang</a> - deputy director</li>
-<li><a href="https://www.linkedin.com/in/vikram-sinha-9a28476">Vikram Sinha</a></li>
-<li>math molecular biology - impressive - reviewer</li>
-<li>Office of CP - 7개 division, 1~5 clinical division- 질환별로 - align (DCP) PM(떠오르는 학문) PG division</li>
-</ul>
-</div>
-<div id="pfizer" class="section level3">
-<h3><span class="header-section-number">5.1.3</span> Pfizer</h3>
+<li>Classifier / Prognostic / Predictive / Monitoring</li>
+</ul></li>
+<li>Petal et al. MRI-detected tumor response for locally advanced rectal cancer predicts survival outcomes</li>
+<li>Machtay et al. Prediction of survival
 <ul>
-<li>파리바?</li>
-<li>크루시파이? - Metz Karlsson과는 아니고..</li>
-<li>파일러비시니? UW - metrician -&gt; 임상약리에서 뽑았다. (파리바)</li>
-<li>피터 뮬리건? &lt;-&gt; 아만티아(놀려고 함..)</li>
-<li>밥 파월 = 임동석 선생님</li>
+<li>Prospective</li>
+<li>S III lung cancer eligible for CCRT</li>
+<li>Endpoint : overall survival</li>
+<li>SUV</li>
+</ul></li>
+<li>Hylton et al.
+<ul>
+<li>Prospective</li>
+<li>Index: functional tumor volume measured with pre-surgery breast MRI</li>
+<li>Comparator: post-surgical pathologic complete response(PCR)</li>
+<li>Modified C-statistics(ROC) - diagnosis는 있다 없다로 나온다. survival은 time to event - 각각의 time point마다 diagnosis 유사한 통계량이 나와서 그걸 summation</li>
+</ul></li>
+<li>Studies of predictive accuracy
+<ul>
+<li>Two approaches - Time-to-event / event by a fixed time</li>
+<li>Event by a fixed time - Sn Sp ROC - Accuracy study와 유사한 것으로 된다.</li>
+</ul></li>
+<li>더 impact있는 것. - randomization을 테스트 후에 할 것인가 아니면 전에 할 것인가? 전에 하는 것이 더 임팩트 있다. 왜냐하면 테스트(+)이면 치료 들어가는 경우가 많기 때문이다.</li>
+<li>후자에 해당하는 (더 임팩트있는) 스터디의 예.</li>
+<li>Monitoring biomarker
+<ul>
+<li>Correlation between x and y / delta x and delta y</li>
+<li>Delta를 보는 것이 중요하다.</li>
+</ul></li>
 </ul>
-</div>
-</div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-Lim_2014">
-<p>1. Lim H-S, Bae K-S (2014) Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke. The Journal of Clinical Pharmacology 55:458–466</p>
 </div>
 </div>
             </section>
@@ -211,8 +217,8 @@ MathJax.Hub.Config({
           </div>
         </div>
       </div>
-<a href="prism.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="prism-afternoon.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="observational-study-pitfall-.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="-.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -239,7 +245,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-07-13-PRISM.rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-06-24-ACREP.rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
