--- a/ConferencesBook/index.html
+++ b/ConferencesBook/index.html
@@ -27,6 +27,11 @@
 
 <meta name="date" content="2016-07-13">
 
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  TeX: { equationNumbers: { autoNumber: "AMS" } }
+});
+</script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -34,7 +39,7 @@
   
   
 
-<link rel="next" href="morning.html">
+<link rel="next" href="kscpt.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -51,43 +56,6 @@
 
 
 
-<style type="text/css">
-div.sourceCode { overflow-x: auto; }
-table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode {
-  margin: 0; padding: 0; vertical-align: baseline; border: none; }
-table.sourceCode { width: 100%; line-height: 100%; }
-td.lineNumbers { text-align: right; padding-right: 4px; padding-left: 4px; color: #aaaaaa; border-right: 1px solid #aaaaaa; }
-td.sourceCode { padding-left: 5px; }
-code > span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code > span.dt { color: #902000; } /* DataType */
-code > span.dv { color: #40a070; } /* DecVal */
-code > span.bn { color: #40a070; } /* BaseN */
-code > span.fl { color: #40a070; } /* Float */
-code > span.ch { color: #4070a0; } /* Char */
-code > span.st { color: #4070a0; } /* String */
-code > span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code > span.ot { color: #007020; } /* Other */
-code > span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code > span.fu { color: #06287e; } /* Function */
-code > span.er { color: #ff0000; font-weight: bold; } /* Error */
-code > span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
-code > span.cn { color: #880000; } /* Constant */
-code > span.sc { color: #4070a0; } /* SpecialChar */
-code > span.vs { color: #4070a0; } /* VerbatimString */
-code > span.ss { color: #bb6688; } /* SpecialString */
-code > span.im { } /* Import */
-code > span.va { color: #19177c; } /* Variable */
-code > span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code > span.op { color: #666666; } /* Operator */
-code > span.bu { } /* BuiltIn */
-code > span.ex { } /* Extension */
-code > span.pp { color: #bc7a00; } /* Preprocessor */
-code > span.at { color: #7d9029; } /* Attribute */
-code > span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code > span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code > span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-</style>
 
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
@@ -104,23 +72,68 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="./">Conferences</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Prism</a><ul>
-<li class="chapter" data-level="1.1" data-path="morning.html"><a href="morning.html"><i class="fa fa-check"></i><b>1.1</b> Morning</a><ul>
-<li class="chapter" data-level="1.1.1" data-path="morning.html"><a href="morning.html#lim-covariate-model"><i class="fa fa-check"></i><b>1.1.1</b> Lim Covariate model</a></li>
-<li class="chapter" data-level="1.1.2" data-path="morning.html"><a href="morning.html#fda---lee"><i class="fa fa-check"></i><b>1.1.2</b> FDA - Lee</a></li>
-<li class="chapter" data-level="1.1.3" data-path="morning.html"><a href="morning.html#pfizer"><i class="fa fa-check"></i><b>1.1.3</b> Pfizer</a></li>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a></li>
+<li class="chapter" data-level="2" data-path="kscpt.html"><a href="kscpt.html"><i class="fa fa-check"></i><b>2</b> 2016 KSCPT</a><ul>
+<li class="chapter" data-level="2.1" data-path="opening-remark.html"><a href="opening-remark.html"><i class="fa fa-check"></i><b>2.1</b> Opening Remark</a></li>
+<li class="chapter" data-level="2.2" data-path="first-session.html"><a href="first-session.html"><i class="fa fa-check"></i><b>2.2</b> First Session</a><ul>
+<li class="chapter" data-level="2.2.1" data-path="first-session.html"><a href="first-session.html#precision-medicine-a-clinical-pharmacological-perspective"><i class="fa fa-check"></i><b>2.2.1</b> 13:20~14:00 Precision Medicine: A Clinical Pharmacological Perspective</a></li>
+<li class="chapter" data-level="2.2.2" data-path="first-session.html"><a href="first-session.html#the-role-of-pharmacogenomics-in-drug-development-regulatory-review-and-clinical-practice"><i class="fa fa-check"></i><b>2.2.2</b> 14:00~14:30 The role of pharmacogenomics in drug development, regulatory review and clinical practice</a></li>
+<li class="chapter" data-level="2.2.3" data-path="first-session.html"><a href="first-session.html#the-liver-gut-microbiota-axis-modulates-inter-individual-variability-in-xenobiotic-disposition-and-toxicology"><i class="fa fa-check"></i><b>2.2.3</b> 14:30~15:00 The Liver-Gut Microbiota Axis Modulates Inter-Individual Variability in Xenobiotic Disposition and Toxicology</a></li>
 </ul></li>
-<li class="chapter" data-level="1.2" data-path="prism-afternoon.html"><a href="prism-afternoon.html"><i class="fa fa-check"></i><b>1.2</b> PRISM Afternoon</a><ul>
-<li class="chapter" data-level="1.2.1" data-path="prism-afternoon.html"><a href="prism-afternoon.html#kim"><i class="fa fa-check"></i><b>1.2.1</b> Kim</a></li>
-<li class="chapter" data-level="1.2.2" data-path="prism-afternoon.html"><a href="prism-afternoon.html#strategic-application-of-pm-in-global-drug-development-experience-from-hanmi"><i class="fa fa-check"></i><b>1.2.2</b> Strategic application of PM in global drug development: Experience from Hanmi</a></li>
-<li class="chapter" data-level="1.2.3" data-path="prism-afternoon.html"><a href="prism-afternoon.html#mbdd"><i class="fa fa-check"></i><b>1.2.3</b> MBDD</a></li>
-<li class="chapter" data-level="1.2.4" data-path="prism-afternoon.html"><a href="prism-afternoon.html#pharmacometric-information-in-drug-label"><i class="fa fa-check"></i><b>1.2.4</b> Pharmacometric information in drug label</a></li>
-<li class="chapter" data-level="1.2.5" data-path="prism-afternoon.html"><a href="prism-afternoon.html#pharmacometrics-in-dose-optimization"><i class="fa fa-check"></i><b>1.2.5</b> Pharmacometrics in Dose Optimization</a></li>
+<li class="chapter" data-level="2.3" data-path="second-session.html"><a href="second-session.html"><i class="fa fa-check"></i><b>2.3</b> Second Session</a><ul>
+<li class="chapter" data-level="2.3.1" data-path="second-session.html"><a href="second-session.html#the-role-of-stem-cells-in-discovery-and-validation-of-pharmacogenomic-markers"><i class="fa fa-check"></i><b>2.3.1</b> 15:20~15:50 The role of stem cells in discovery and validation of pharmacogenomic markers</a></li>
+<li class="chapter" data-level="2.3.2" data-path="second-session.html"><a href="second-session.html#pharmacogenomics-and-epigenomics"><i class="fa fa-check"></i><b>2.3.2</b> 15:50~16:20 Pharmacogenomics and Epigenomics</a></li>
+<li class="chapter" data-level="2.3.3" data-path="second-session.html"><a href="second-session.html#emerging-roles-of-human-cyp1b1-in-cancer-growth-and-metastasis"><i class="fa fa-check"></i><b>2.3.3</b> 16:20~16:50 Emerging roles of human CYP1B1 in cancer growth and metastasis</a></li>
+<li class="chapter" data-level="2.3.4" data-path="second-session.html"><a href="second-session.html#omics-for-precision-medicine-clinical-implementation-in-oncology"><i class="fa fa-check"></i><b>2.3.4</b> 16:50~17:20 omics for precision Medicine : Clinical Implementation in oncology</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="2" data-path="now-lets-check-what-happens.html"><a href="now-lets-check-what-happens.html"><i class="fa fa-check"></i><b>2</b> Now let’s check what happens</a></li>
+<li class="chapter" data-level="3" data-path="translation-and-convergence-for-future-medicine.html"><a href="translation-and-convergence-for-future-medicine.html"><i class="fa fa-check"></i><b>3</b> “Translation and Convergence for Future Medicine”</a><ul>
+<li class="chapter" data-level="3.1" data-path="plenary-session-ii-rd-.html"><a href="plenary-session-ii-rd-.html"><i class="fa fa-check"></i><b>3.1</b> Plenary Session II “의료기술및 R&amp;D 변화의최신동향”</a><ul>
+<li class="chapter" data-level="3.1.1" data-path="plenary-session-ii-rd-.html"><a href="plenary-session-ii-rd-.html#lecture-1--------"><i class="fa fa-check"></i><b>3.1.1</b> 13:30 ~ 14:15 Lecture 1 :의료분야에서의 빅데이터 :임상연구 및 진료를 위한 애널리틱스의 활용</a></li>
+<li class="chapter" data-level="3.1.2" data-path="plenary-session-ii-rd-.html"><a href="plenary-session-ii-rd-.html#lecture-2----"><i class="fa fa-check"></i><b>3.1.2</b> 14:15 ~ 15:00 Lecture 2 :합성 항체에서 합성 단백질로</a></li>
+</ul></li>
+<li class="chapter" data-level="3.2" data-path="parallel-session-i-chairperson-.html"><a href="parallel-session-i-chairperson-.html"><i class="fa fa-check"></i><b>3.2</b> Parallel Session I “의료분야에서의빅데이터” Chairperson :김태원(서울아산병원임상의학연구소장) [대강당]</a><ul>
+<li class="chapter" data-level="3.2.1" data-path="parallel-session-i-chairperson-.html"><a href="parallel-session-i-chairperson-.html#lecture-1------alexander-turchin-harvard-university-brigham-and-womens-hospital-usa"><i class="fa fa-check"></i><b>3.2.1</b> Lecture 1 :전자의무기록에 기반한 임상 빅데이터 연구 Alexander Turchin (Harvard University, Brigham and Women’s Hospital, USA)</a></li>
+<li class="chapter" data-level="3.2.2" data-path="parallel-session-i-chairperson-.html"><a href="parallel-session-i-chairperson-.html#lecture-2----tom-lawry-microsoft-corp.-usa"><i class="fa fa-check"></i><b>3.2.2</b> Lecture 2 : 의료분야에서의 빅데이터 분석 Tom Lawry (Microsoft Corp., USA)</a></li>
+<li class="chapter" data-level="3.2.3" data-path="parallel-session-i-chairperson-.html"><a href="parallel-session-i-chairperson-.html#lecture-3-------"><i class="fa fa-check"></i><b>3.2.3</b> Lecture 3 :생물기작 기반 암 오믹스 데이터 분석 기법</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="4" data-path="acrep.html"><a href="acrep.html"><i class="fa fa-check"></i><b>4</b> ACREP</a><ul>
+<li class="chapter" data-level="4.1" data-path="observational-study.html"><a href="observational-study.html"><i class="fa fa-check"></i><b>4.1</b> Observational Study</a><ul>
+<li class="chapter" data-level="4.1.1" data-path="observational-study.html"><a href="observational-study.html#contents"><i class="fa fa-check"></i><b>4.1.1</b> Contents</a></li>
+</ul></li>
+<li class="chapter" data-level="4.2" data-path="observational-study-pitfall-.html"><a href="observational-study-pitfall-.html"><i class="fa fa-check"></i><b>4.2</b> Observational Study의 Pitfall 및 이를 극복하기 위한 방법</a><ul>
+<li class="chapter" data-level="4.2.1" data-path="observational-study-pitfall-.html"><a href="observational-study-pitfall-.html#experimental-study-yes"><i class="fa fa-check"></i><b>4.2.1</b> Experimental study? Yes</a></li>
+<li class="chapter" data-level="4.2.2" data-path="observational-study-pitfall-.html"><a href="observational-study-pitfall-.html#experimental-study-no"><i class="fa fa-check"></i><b>4.2.2</b> Experimental study? No</a></li>
+<li class="chapter" data-level="4.2.3" data-path="observational-study-pitfall-.html"><a href="observational-study-pitfall-.html#contents-1"><i class="fa fa-check"></i><b>4.2.3</b> Contents</a></li>
+<li class="chapter" data-level="4.2.4" data-path="observational-study-pitfall-.html"><a href="observational-study-pitfall-.html#conclusion"><i class="fa fa-check"></i><b>4.2.4</b> Conclusion</a></li>
+</ul></li>
+<li class="chapter" data-level="4.3" data-path="diagnostic-test-biomarker-study.html"><a href="diagnostic-test-biomarker-study.html"><i class="fa fa-check"></i><b>4.3</b> Diagnostic test &amp; Biomarker Study</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="diagnostic-test-biomarker-study.html"><a href="diagnostic-test-biomarker-study.html#contents---diagnostic-test"><i class="fa fa-check"></i><b>4.3.1</b> Contents - Diagnostic test</a></li>
+<li class="chapter" data-level="4.3.2" data-path="diagnostic-test-biomarker-study.html"><a href="diagnostic-test-biomarker-study.html#contents---biomarker"><i class="fa fa-check"></i><b>4.3.2</b> Contents - Biomarker</a></li>
+</ul></li>
+<li class="chapter" data-level="4.4" data-path="-.html"><a href="-.html"><i class="fa fa-check"></i><b>4.4</b> 2차 자료원을 이용한 역학 연구군</a></li>
+<li class="chapter" data-level="4.5" data-path="-clinical-prediction-model-individual-riskoutcome-probability-.html"><a href="-clinical-prediction-model-individual-riskoutcome-probability-.html"><i class="fa fa-check"></i><b>4.5</b> 대규모 이차 자료원을 이용한 clinical prediction model : individual risk/outcome probability 예측 분석법</a></li>
+<li class="chapter" data-level="4.6" data-path="web-r-org.html"><a href="web-r-org.html"><i class="fa fa-check"></i><b>4.6</b> Web-r.org</a><ul>
+<li class="chapter" data-level="4.6.1" data-path="web-r-org.html"><a href="web-r-org.html#contents-2"><i class="fa fa-check"></i><b>4.6.1</b> Contents</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="prism.html"><a href="prism.html"><i class="fa fa-check"></i><b>5</b> Prism</a><ul>
+<li class="chapter" data-level="5.1" data-path="morning.html"><a href="morning.html"><i class="fa fa-check"></i><b>5.1</b> Morning</a><ul>
+<li class="chapter" data-level="5.1.1" data-path="morning.html"><a href="morning.html#lim-covariate-model"><i class="fa fa-check"></i><b>5.1.1</b> Lim Covariate model</a></li>
+<li class="chapter" data-level="5.1.2" data-path="morning.html"><a href="morning.html#fda---lee"><i class="fa fa-check"></i><b>5.1.2</b> FDA - Lee</a></li>
+<li class="chapter" data-level="5.1.3" data-path="morning.html"><a href="morning.html#pfizer"><i class="fa fa-check"></i><b>5.1.3</b> Pfizer</a></li>
+</ul></li>
+<li class="chapter" data-level="5.2" data-path="prism-afternoon.html"><a href="prism-afternoon.html"><i class="fa fa-check"></i><b>5.2</b> PRISM Afternoon</a><ul>
+<li class="chapter" data-level="5.2.1" data-path="prism-afternoon.html"><a href="prism-afternoon.html#kim"><i class="fa fa-check"></i><b>5.2.1</b> Kim</a></li>
+<li class="chapter" data-level="5.2.2" data-path="prism-afternoon.html"><a href="prism-afternoon.html#strategic-application-of-pm-in-global-drug-development-experience-from-hanmi"><i class="fa fa-check"></i><b>5.2.2</b> Strategic application of PM in global drug development: Experience from Hanmi</a></li>
+<li class="chapter" data-level="5.2.3" data-path="prism-afternoon.html"><a href="prism-afternoon.html#mbdd"><i class="fa fa-check"></i><b>5.2.3</b> MBDD</a></li>
+<li class="chapter" data-level="5.2.4" data-path="prism-afternoon.html"><a href="prism-afternoon.html#pharmacometric-information-in-drug-label"><i class="fa fa-check"></i><b>5.2.4</b> Pharmacometric information in drug label</a></li>
+<li class="chapter" data-level="5.2.5" data-path="prism-afternoon.html"><a href="prism-afternoon.html#pharmacometrics-in-dose-optimization"><i class="fa fa-check"></i><b>5.2.5</b> Pharmacometrics in Dose Optimization</a></li>
+</ul></li>
+</ul></li>
 <li class="divider"></li>
-<li><a href="http://shanmdphd.github.io">shanmdphd.github.io</a></li>
+<li><a href="http://shanmdphd.github.io">Back to shanmdphd.github.io</a></li>
 
 </ul>
 
@@ -144,8 +157,9 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <h4 class="author"><em>Sungpil Han</em></h4>
 <h4 class="date"><em>2016-07-13</em></h4>
 </div>
-<div id="prism" class="section level1">
-<h1><span class="header-section-number">Chapter 1</span> Prism</h1> 
+<div id="introduction" class="section level1">
+<h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
+
 </div>
             </section>
 
@@ -153,7 +167,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
         </div>
       </div>
 
-<a href="morning.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="kscpt.html" class="navigation navigation-next navigation-unique" aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -191,6 +205,17 @@ gitbook.start({
 });
 </script>
 
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+  (function () {
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    if (location.protocol !== "file:" && /^https?:/.test(script.src))
+      script.src  = script.src.replace(/^https?:/, '');
+    document.getElementsByTagName("head")[0].appendChild(script);
+  })();
+</script>
 </body>
 
 </html>
