--- a/ConferencesBook/parallel-session-i-chairperson-.html
+++ b/ConferencesBook/parallel-session-i-chairperson-.html
@@ -38,8 +38,8 @@ MathJax.Hub.Config({
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="prism.html">
-<link rel="next" href="prism-afternoon.html">
+<link rel="prev" href="plenary-session-ii-rd-.html">
+<link rel="next" href="acrep.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -152,67 +152,73 @@ MathJax.Hub.Config({
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="morning" class="section level2">
-<h2><span class="header-section-number">5.1</span> Morning</h2>
-<div id="lim-covariate-model" class="section level3">
-<h3><span class="header-section-number">5.1.1</span> Lim Covariate model</h3>
-<div id="ischemic-stroke" class="section level4">
-<h4><span class="header-section-number">5.1.1.1</span> Ischemic stroke</h4>
+<div id="parallel-session-i--chairperson--" class="section level2">
+<h2><span class="header-section-number">3.2</span> Parallel Session I “의료분야에서의빅데이터” Chairperson :김태원(서울아산병원임상의학연구소장) [대강당]</h2>
+<p>15:20 ~ 18:00</p>
+<div id="lecture-1------alexander-turchin-harvard-university-brigham-and-womens-hospital-usa" class="section level3">
+<h3><span class="header-section-number">3.2.1</span> Lecture 1 :전자의무기록에 기반한 임상 빅데이터 연구 Alexander Turchin (Harvard University, Brigham and Women’s Hospital, USA)</h3>
 <ul>
-<li>Primary endpoint</li>
-<li>time-to-primary endpoint (time-to-event)</li>
-<li>late recurrence, DM</li>
-<li>Secondary endpoint</li>
-<li>late recurrence</li>
-<li>통상적인 VPC - K-M plots</li>
-<li>Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke <a href="http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract" class="uri">http://onlinelibrary.wiley.com/doi/10.1002/jcph.427/abstract</a> <span class="citation">[<a href="#ref-Lim_2014">1</a>]</span></li>
+<li>Data warehouse : integrates data from multiple sources - i2b2 | ABLE | OHDSI</li>
+<li>who entered the data? Wrong input to public repo (DKA for 2 years!)</li>
+<li>Data quality</li>
+<li>Raynaud’s syndrome - Omega3 (Failure)</li>
 </ul>
 </div>
-<div id="mr-image----" class="section level4">
-<h4><span class="header-section-number">5.1.1.2</span> MR image -&gt; 예후 예측</h4>
+<div id="lecture-2----tom-lawry-microsoft-corp.-usa" class="section level3">
+<h3><span class="header-section-number">3.2.2</span> Lecture 2 : 의료분야에서의 빅데이터 분석 Tom Lawry (Microsoft Corp., USA)</h3>
 <ul>
-<li>mRS (modified Rankin Scale)</li>
-<li>응급실에 왔을때</li>
-<li>DM - NIH scale 3D Plot</li>
-<li>광학영상 - preclinical 에서 부터 NONMEM을 사용해서</li>
+<li>8 seconds = Concentration time</li>
+<li>Analytics Convergence Zone - Clinical data, Geo/Social/Environmental data/Claims&amp;Cost Data/Pharma&amp;Life Sience Data, Patient &amp; Citizen Data</li>
+<li><a href="https://powerbi.microsoft.com/ko-kr/" class="uri">https://powerbi.microsoft.com/ko-kr/</a> !!!!! 반드시 사용해 볼것. 좋은 Visualization.</li>
+<li><a href="http://www.ciokorea.com/news/29118" class="uri">http://www.ciokorea.com/news/29118</a></li>
 </ul>
 </div>
-</div>
-<div id="fda---lee" class="section level3">
-<h3><span class="header-section-number">5.1.2</span> FDA - Lee</h3>
+<div id="lecture-3-------" class="section level3">
+<h3><span class="header-section-number">3.2.3</span> Lecture 3 :생물기작 기반 암 오믹스 데이터 분석 기법</h3>
 <ul>
-<li><a href="http://www.dailypharm.com/News/202010" class="uri">http://www.dailypharm.com/News/202010</a></li>
-<li><a href="https://www.linkedin.com/in/jogagobburu">Joga Gobburu</a> - 인도사람</li>
-<li><a href="https://www.linkedin.com/in/yaning-wang-a47192b">Yaning Wang</a> - deputy director</li>
-<li><a href="https://www.linkedin.com/in/vikram-sinha-9a28476">Vikram Sinha</a></li>
-<li>math molecular biology - impressive - reviewer</li>
-<li>Office of CP - 7개 division, 1~5 clinical division- 질환별로 - align (DCP) PM(떠오르는 학문) PG division</li>
+<li>speaker: 김 선 (서울대학교 생물정보연구소)</li>
+<li><a href="https://sites.google.com/site/biohealthinformaticslab/sun-kim" class="uri">https://sites.google.com/site/biohealthinformaticslab/sun-kim</a></li>
+<li><a href="http://bioinfo.snu.ac.kr/main/index.php" class="uri">http://bioinfo.snu.ac.kr/main/index.php</a></li>
+<li>DNA, RNA, Protein이 중요 - Somatic mutation뿐만 아니라</li>
+<li>Transcriptome (RNA-sequencing data)</li>
+<li>싸고 쉽다.</li>
+<li>그에 비해 Underestimated되어 있다.</li>
+<li>Breast cancer</li>
+<li>가장 잘 알려진 암종.</li>
+<li>21-gene Oncotype DX !!! <a href="http://www.oncotypedx.com/" class="uri">http://www.oncotypedx.com/</a></li>
+<li>PAM50 - Prediction analysis of microarray by 50 gene classifier !!! - Survival 예측하는 Gold-standard</li>
+<li>Transcriptome Data analysis <a href="http://prosigna.com/x-us/overview/" class="uri">http://prosigna.com/x-us/overview/</a></li>
+<li>Pathway (context) analysis는 과연 informative한가?</li>
+<li>A Critical Evaluation of Network and Pathway-Based Classifiers for Outcome Prediction in Breast Cancer (PLoS One 2012) <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0034796" class="uri">http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0034796</a></li>
+<li>50개를 랜덤하게 취해도 유의미하게 나왔다. 아무거나 취해도 유의미하게 만들 수 있다. (Negative result!)</li>
+<li>“Based on these results there is currently no reason to prefer prognostic classifiers based on composite features over single genes classifiers for predicting outcome in breast cancer.”</li>
+<li>따라서 50개를 정할 때 기능적인 면을 고려해야 한다.</li>
+<li>PPI-based Pathway Decomposition !!! - 우리의 분류를 기반으로 Survival plot를 그리면 확연한 차이가 난다.</li>
+<li>Decomposed pathway and its activity measurement Using RNA-sequencing data</li>
+<li>이러한 알고리듬으로 RNA-sequencing data 분석 (1138개의 sample을 사용)</li>
+<li>TCGA data (Breast Cancer)</li>
+<li>기본적으로 information theory를 응용한 것이다.</li>
+<li>Subtype과 발현량의 ranking에 따라 score를 매긴 후 distinguishing할 수 있다.</li>
+<li>클래스마다 차이가 확연한 Subnetwork A는 좋은 모델</li>
+<li>클래스마다 차이가 없으면 Subnetwork C는 나쁜 모델. 우리는 좋은 모델을 택해야 한다.</li>
+<li><strong>Top10 Regulated pathways by TF/miRNA</strong></li>
+<li>mir-30a (basal cell cycle activation) -&gt; mir-149, let-7b, mir-30a</li>
+<li>Sub-network mining approach</li>
+<li>Experimental validation requires collaborators who enjoy new approaches.</li>
+<li>혹시 talk를 들으시고 관심있으면 Contact.</li>
 </ul>
-</div>
-<div id="pfizer" class="section level3">
-<h3><span class="header-section-number">5.1.3</span> Pfizer</h3>
-<ul>
-<li>파리바?</li>
-<li>크루시파이? - Metz Karlsson과는 아니고..</li>
-<li>파일러비시니? UW - metrician -&gt; 임상약리에서 뽑았다. (파리바)</li>
-<li>피터 뮬리건? &lt;-&gt; 아만티아(놀려고 함..)</li>
-<li>밥 파월 = 임동석 선생님</li>
-</ul>
+<p><img src="http://aims.amc.seoul.kr/asan/imageDown/homebuilder/20160527?fileName=Scientific-Program-kor.jpg" /> <a href="http://www.amc.seoul.kr/asan/academy/event/eventDetail.do?eventId=572" class="uri">http://www.amc.seoul.kr/asan/academy/event/eventDetail.do?eventId=572</a> <a href="http://aims.amc.seoul.kr/asan/depts/aims/E/deptMain.do" class="uri">http://aims.amc.seoul.kr/asan/depts/aims/E/deptMain.do</a></p>
+
 </div>
 </div>
-<h3>References</h3>
-<div id="refs" class="references">
-<div id="ref-Lim_2014">
-<p>1. Lim H-S, Bae K-S (2014) Modeling and simulation analysis of the relationship between lesion recurrence on brain images and clinical recurrence in patients with ischemic stroke. The Journal of Clinical Pharmacology 55:458–466</p>
-</div>
-</div>
+<!-- </div> -->
             </section>
 
           </div>
         </div>
       </div>
-<a href="prism.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="prism-afternoon.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="plenary-session-ii-rd-.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="acrep.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
@@ -239,7 +245,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-07-13-PRISM.rmd",
+"link": "https://github.com/shanmdphd/shanmdphd.github.io/edit/master/_ConferencesSource/2016-06-17-AMIS.rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
